--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Grocery Booking API",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "prisma:push": "dotenv -e .env.dev -- prisma db push",
+    "dev": "NODE_ENV=dev dotenv -e .env.dev -- tsx watch src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Faiyaz Mujawar",
@@ -13,6 +14,7 @@
     "@prisma/client": "5.12.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.12.1",
