--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,11 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "./coverage",
+    "./dist",
+    "./__tests__",
+    "jest.config.js"
+  ]
 }
