--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,15 @@
-DATABASE_URL=""
-# DATABASE_URL="postgresql://faiyaz:root@localhost:5432/test?schema=public"
+# This is an exampel for what the env file should look like
+
+NODE_ENV=prod
+
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=db
+
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public
+
 PORT=3000
 
-JWT_SECRET="bXlzdXBlcnNlY3JldEpXVA=="
+JWT_SECRET="jwt_secret=="
 JWT_EXPIRATION=1d
 JWT_REFRESH_TOKEN_EXPIRATION=10d
