--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "dotenv-cli": "^7.4.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.12.1",
     "tsx": "^4.7.2",
-    "prisma": "^5.12.1"
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
